my/target/test/cgdb-scan/2022-04-21-065858-59000-1/failures/clang_other_error_pPG7ej.ii.stderr.txt
In file included from test/cc/libevent_server.cc:12:
/usr/local/include/event2/event.h:185:10: fatal error: 'event2/visibility.h' file not found
#include <event2/visibility.h>
         ^~~~~~~~~~~~~~~~~~~~~
1 error generated.
